2006-05-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Replaced use of "which" with query_exec (Tru64).

2006-05-08  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Added X_AC_EXPAND_INSTALL_DIRS.
	* config/x_ac_expand_install_dirs.m4: Added.
	* src/libcommon/munge_defs.h: Updated MUNGE_SOCKET_NAME,
	  MUNGE_AUTH_PIPE_DIR, MUNGED_LOGFILE, MUNGED_RANDOM_SEED, and
	  MUNGED_SECRET_KEY to use the expanded install dir names in config.h.

2006-05-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init, src/etc/munge.sysconfig: Tweaked defs.

2006-05-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Added support for NICE & USER.
	  Changed ENABLE_SIGHUP_RELOAD to ENABLE_RELOAD.
	  Replaced use of "source" keyword with "." (AIX).
	* src/etc/munge.sysconfig: Added NICE & USER.  Updated comments.

	* src/etc/Makefile.am: Preserved existing config files on install.

	* munge.spec: Explicitly set localstatedir & sysconfdir for configure.
	* src/etc/Makefile.am: Added use of $(localstatedir) & $(sysconfdir).

	* munge.spec: Added "/var/*/*" to %files.
	* src/etc/Makefile.am: Removed use of $(sysconfdir).  Created dirs for
	  /etc/munge, /var/lib/munge, and /var/run/munge.
	* src/libcommon/munge_defs.h: Changed MUNGE_SOCKET_NAME.

2006-05-03  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Removed tests for init.d & sysconfig files.

	* munge.spec: Removed used of munge-files-aux list.
	* src/etc/Makefile.am: Removed tests for init.d & sysconfig dirs.

2006-05-02  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Removed use of "local" keyword (Solaris).

	* src/etc/munge.init: Added tests for distro release/version files in
	  service_init() to prevent SuSE from being recognized as Debian due to
	  existence of /sbin/start-stop-daemon.

	* PLATFORMS: Updated.

	* src/etc/munge.init: Replaced "echo -n" with "printf" (AIX).

	* src/etc/munge.init, src/etc/munge.sysconfig: Revamped.

2006-04-03  Chris Dunlap  <cdunlap@llnl.gov>
