@@ -139,6 +139,7 @@ AC_CONFIG_FILES( \
   Makefile \
   src/Makefile \
   src/etc/Makefile \
+  src/etc/munge.init \
   src/libcommon/Makefile \
   src/libcommon/munge.7 \
   src/libmissing/Makefile \
